--- a/src/_sass/gtk/_common-4.0.scss
+++ b/src/_sass/gtk/_common-4.0.scss
@@ -2380,7 +2380,7 @@ $tab-radius: $corner-radius;
     box-shadow: none;
 
     &, &:hover {
-      background-color: $base;
+      background-color: $background;
     }
 
     &:disabled { color: $text-disabled; }
@@ -2396,7 +2396,7 @@ notebook {
   &.frame > header { background-color: $base-alt; }
 
   &, &.frame {
-    background-color: $base;
+    background-color: $background;
     border-radius: $corner-radius;
   }
 
@@ -3519,7 +3519,7 @@ separator {
 listview,
 list {
   border-color: $divider;
-  background-color: $base;
+  background-color: $background;
   color: $text;
   box-shadow: none;
 
